--- a/src/main/resources/templates/commons/wrapper.html
+++ b/src/main/resources/templates/commons/wrapper.html
@@ -5,8 +5,8 @@
 <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row" th:fragment="wrapper">
     <div class="navbar-brand-wrapper d-flex justify-content-center">
         <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
-            <a class="navbar-brand brand-logo" th:href="index.html"><img src="/images/logo.svg" alt="logo"/></a>
-            <a class="navbar-brand brand-logo-mini" th:href="index.html"><img src="/images/logo-mini.svg" alt="logo"/></a>
+            <a class="navbar-brand brand-logo" th:href="index.html"><img th:src="@{/images/logo.svg}" alt="logo"/></a>
+            <a class="navbar-brand brand-logo-mini" th:href="index.html"><img th:src="@{/images/logo-mini.svg}" alt="logo"/></a>
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
                 <span class="mdi mdi-sort-variant"></span>
             </button>
@@ -35,7 +35,7 @@
                     <p class="mb-0 font-weight-normal float-left dropdown-header">Messages</p>
                     <a class="dropdown-item">
                         <div class="item-thumbnail">
-                            <img src="images/faces/face4.jpg" alt="image" class="profile-pic">
+                            <img th:src="@{/images/faces/face4.jpg}" alt="image" class="profile-pic">
                         </div>
                         <div class="item-content flex-grow">
                             <h6 class="ellipsis font-weight-normal">David Grey
@@ -47,7 +47,7 @@
                     </a>
                     <a class="dropdown-item">
                         <div class="item-thumbnail">
-                            <img src="images/faces/face2.jpg" alt="image" class="profile-pic">
+                            <img th:src="@{images/faces/face2.jpg}" alt="image" class="profile-pic">
                         </div>
                         <div class="item-content flex-grow">
                             <h6 class="ellipsis font-weight-normal">Tim Cook
@@ -59,7 +59,7 @@
                     </a>
                     <a class="dropdown-item">
                         <div class="item-thumbnail">
-                            <img src="images/faces/face3.jpg" alt="image" class="profile-pic">
+                            <img th:src="@{images/faces/face3.jpg}" alt="image" class="profile-pic">
                         </div>
                         <div class="item-content flex-grow">
                             <h6 class="ellipsis font-weight-normal"> Johnson
@@ -121,7 +121,7 @@
             </li>
             <li class="nav-item nav-profile dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-                    <img src="images/faces/face5.jpg" alt="profile"/>
+                    <img th:src="@{images/faces/face5.jpg}" alt="profile"/>
                     <span class="nav-profile-name">Louis Barnett</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
