--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -35,8 +35,8 @@
                 <div class="d-flex justify-content-between flex-wrap">
                   <div class="d-flex align-items-end flex-wrap">
                     <div class="mr-md-3 mr-xl-5">
-                      <h2>Welcome back,</h2>
-                      <p class="mb-md-0">Your analytics dashboard template.</p>
+                      <h2>欢迎回来</h2>
+                      <p class="mb-md-0">祝您快乐每一天</p>
                     </div>
 
                   </div>
@@ -69,17 +69,21 @@
                             <th>创建日期</th>
                             <th>截止时间</th>
                             <th>状态</th>
+                            <th>操作</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr th:each="task:${tasks}">
                             <td th:text="${task.id}"></td>
-                            <td  th:id="${task.subject}">
-                              <a th:href="@{/admin/task/{id}(id=${task.id})}" th:text="${task.subject}" />
+                            <td>
+                              <a  th:href="@{/admin/task/{id}(id=${task.id})}" th:text="${task.subject}" />
                             </td>
-                            <td th:text="${task.createdAt}"></td>
-                            <td th:text="${task.deadline}"></td>
-                            <td th:text="${task.state}"></td>
+                            <td th:text="${#dates.format(task.createdAt, 'yyyy-MM-dd')}"></td>
+                            <td th:text="${#dates.format(task.deadline, 'yyyy-MM-dd')}"></td>
+                            <td th:id="${task.id}" th:text="${task.state}"></td>
+                            <td id="login_click">
+                              <a th:id="${task.id}+'_button'" th:if="${task.state}==未完成" th:onclick="submit_set([[${task.id}]]);">完成</a>
+                            </td>
                           </tr>
                         </tbody>
                       </table>
@@ -99,7 +103,52 @@
       <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
+    <script>
+      function submit_set(e) {
+        $.ajax({
+          type:"PATCH",
+          url:"http://localhost:8080/admin/task/"+e+"/setCompleted",
+          success:function(data){
+            console.log(data);
+            if(data.state=="已完成"){
+              $("#"+e).text("已完成");
+              $("#"+e+"_button").hide();
+            }
+          },
+          error:function(jqXHR){
+            alert("发生错误："+ jqXHR.status);
+          }
+        });
 
+
+      }
+    </script>
+
+    <style>
+
+      #login_click{ margin-top:32px; height:40px; width: 100px}
+      #login_click a
+      {
+
+
+        text-decoration:none;
+        background:#2f435e;
+        color:#f2f2f2;
+
+        padding: 10px 30px 10px 30px;
+        font-size:16px;
+        font-family: 微软雅黑,宋体,Arial,Helvetica,Verdana,sans-serif;
+        font-weight:bold;
+        border-radius:3px;
+
+        -webkit-transition:all linear 0.30s;
+        -moz-transition:all linear 0.30s;
+        transition:all linear 0.30s;
+
+      }
+      #login_click a:hover { background:#385f9e; }
+
+    </style>
     <!-- plugins:js -->
     <script th:src="@{/vendors/base/vendor.bundle.base.js}"></script>
     <!-- endinject -->
