--- a/src/main/resources/templates/release.html
+++ b/src/main/resources/templates/release.html
@@ -34,13 +34,13 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <h4 class="card-title">任务信息</h4>
-                                        <form class="form-sample" method="POST" action="/admin/task">
+                                        <form class="form-sample" method="POST" action="/admin/task" onsubmit="return filter()">
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group row">
                                                         <label class="col-sm-3 col-form-label">任务标题</label>
                                                         <div class="col-sm-9">
-                                                            <input type="text" name="subject"   class="form-control" />
+                                                            <input type="text" name="subject" placeholder="最少四个字符"   class="form-control" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -91,12 +91,12 @@
                                                     <div class="form-group row">
                                                         <label class="col-sm-3 col-form-label">描述</label>
                                                         <div class="col-sm-9">
-                                                            <input name="content" type="text" class="form-control" style="width:970px; height:200px;"/>
+                                                            <input name="content" placeholder="最少五个字符"  type="text" class="form-control" style="width:970px; height:200px;"/>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <input  class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit" style="width:150px; height:50px;float: right;"></input>
+                                            <input  class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"  type="submit" style="width:150px; height:50px;float: right;"></input>
                                     </form>
                                 </div>
                             </div>
@@ -113,6 +113,36 @@
         <!-- plugins:js -->
         <script type="text/javascript">
             let inChargeNum = 1;
+            function filter() {
+                var subject=document.getElementsByName("subject")[0].value;
+                var content=document.getElementsByName("content")[0].value;
+                var deadline=document.getElementsByName("deadline")[0].value;
+                var charge=document.getElementsByName("inCharge[0].username")[0].value;
+
+                if(subject.length<4)
+                {
+                    alert("任务标题最少四个字符");
+                    return false;
+                }
+                if(content.length<5)
+                {
+                    alert("任务描述最少五个字符");
+                    return false;
+                }
+                if(new Date(deadline)<new Date()||deadline.length==0)
+                {
+                    alert("截止时间有误");
+                    return false;
+                }
+                if(charge.length==0)
+                {
+                    alert("负责人最少一个");
+                    return false;
+                }
+                return true;
+
+
+            }
             function add_div() {
                 const inputElement = document.createElement("input");
                 inputElement.type="text";
