--- a/src/main/resources/templates/commons/wrapper.html
+++ b/src/main/resources/templates/commons/wrapper.html
@@ -159,6 +159,13 @@
             </a>
         </li>
 
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/admin/employees}">
+                <i class="mdi mdi-view-headline menu-icon"></i>
+                <span class="menu-title">员工列表</span>
+            </a>
+        </li>
+
     </ul>
 </nav>
 
