--- a/src/main/resources/templates/admin/task/release.html
+++ b/src/main/resources/templates/admin/task/release.html
@@ -20,12 +20,12 @@
         <div class="container-scroller">
             <!-- partial:../../partials/_navbar.html -->
 
-            <div th:replace="commons/wrapper::wrapper"></div>
+            <div th:replace="admin/wrapper::wrapper"></div>
 
             <!-- partial -->
             <div class="container-fluid page-body-wrapper">
                 <!-- partial:../../partials/_sidebar.html -->
-                <div th:replace="commons/wrapper::sidebar"></div>
+                <div th:replace="admin/wrapper::sidebar"></div>
                 <!-- partial -->
                 <div class="main-panel">
                     <div class="content-wrapper">
