--- a/src/main/resources/templates/admin/wrapper.html
+++ b/src/main/resources/templates/admin/wrapper.html
@@ -153,9 +153,16 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/admin/task}">
+            <a class="nav-link" th:href="@{/templates/admin/task}">
                 <i class="mdi mdi-view-headline menu-icon"></i>
-                <span class="menu-title">提交任务</span>
+                <span class="menu-title">发布任务</span>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/admin/task/pendingCommits}">
+                <i class="mdi mdi-view-headline menu-icon"></i>
+                <span class="menu-title">待审核提交</span>
             </a>
         </li>
 
@@ -165,6 +172,8 @@
                 <span class="menu-title">员工列表</span>
             </a>
         </li>
+
+
 
     </ul>
 </nav>
