--- a/src/main/resources/templates/employee/task/tasks.html
+++ b/src/main/resources/templates/employee/task/tasks.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Home</title>
+    <title>Dispatcher 任务列表</title>
     <!-- plugins:css -->
     <link rel="stylesheet" th:href="@{/vendors/mdi/css/materialdesignicons.min.css}">
     <link rel="stylesheet" th:href="@{/vendors/base/vendor.bundle.base.css}">
@@ -22,11 +22,11 @@
   <body>
     <div class="container-scroller">
       <!-- partial:partials/_navbar.html -->
-      <div th:replace="commons/wrapper::wrapper"></div>
+      <div th:replace="employee/wrapper::wrapper"></div>
       <!-- partial -->
       <div class="container-fluid page-body-wrapper">
         <!-- partial:partials/_sidebar.html -->
-        <div th:replace="commons/wrapper::sidebar"></div>
+        <div th:replace="employee/wrapper::sidebar"></div>
         <!-- partial -->
         <div class="main-panel">
           <div class="content-wrapper">
@@ -38,17 +38,6 @@
                       <h2>欢迎回来</h2>
                       <p class="mb-md-0">祝您快乐每一天</p>
                     </div>
-
-                  </div>
-                  <div class="d-flex justify-content-between align-items-end flex-wrap">
-
-                    <button type="button" class="btn btn-light bg-white btn-icon mr-3 mt-2 mt-xl-0">
-                      <i class="mdi mdi-clock-outline text-muted"></i>
-                    </button>
-                    <button type="button" class="btn btn-light bg-white btn-icon mr-3 mt-2 mt-xl-0">
-                      <i class="mdi mdi-plus text-muted"></i>
-                    </button>
-
                   </div>
                 </div>
               </div>
@@ -76,13 +65,14 @@
                           <tr th:each="task:${tasks}">
                             <td th:text="${task.id}"></td>
                             <td>
-                              <a  th:href="@{/admin/task/{id}(id=${task.id})}" th:text="${task.subject}" />
+                              <a  th:href="@{/employee/task/{id}(id=${task.id})}" th:text="${task.subject}" />
                             </td>
                             <td th:text="${#dates.format(task.createdAt, 'yyyy-MM-dd')}"></td>
                             <td th:text="${#dates.format(task.deadline, 'yyyy-MM-dd')}"></td>
                             <td th:id="${task.id}" th:text="${task.state}"></td>
-                            <td id="login_click">
-                              <a th:id="${task.id}+'_button'" th:if="${task.state}==未完成" th:onclick="submit_set([[${task.id}]]);">完成</a>
+                            <td>
+                              <a th:if="${task.state}=='未完成'" th:href="@{/employee/task/{id}/commit(id=${task.id})}">提交</a>
+                              <a th:if="${task.state}=='已完成'" th:href="@{/employee/task/{taskId}/download(taskId=${task.id})}">下载commit</a>
                             </td>
                           </tr>
                         </tbody>
@@ -103,26 +93,6 @@
       <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
-    <script>
-      function submit_set(e) {
-        $.ajax({
-          type:"PATCH",
-          url:"http://localhost:8080/admin/task/"+e+"/setCompleted",
-          success:function(data){
-            console.log(data);
-            if(data.state=="已完成"){
-              $("#"+e).text("已完成");
-              $("#"+e+"_button").hide();
-            }
-          },
-          error:function(jqXHR){
-            alert("发生错误："+ jqXHR.status);
-          }
-        });
-
-
-      }
-    </script>
 
     <style>
 
