--- a/src/main/resources/templates/noCSS/employee/commit.html
+++ b/src/main/resources/templates/noCSS/employee/commit.html
@@ -5,7 +5,7 @@
     <title>commit</title>
 </head>
 <body>
-    <form method="POST" action="/employee/task/commit" enctype="multipart/form-data">
+    <form method="POST" action="/employee/testFile" enctype="multipart/form-data">
         <input type="text" name="message"><br>
         <input type="file" name="file"><br>
         <input type="submit" name="commit"><br>
