--- a/src/main/resources/templates/employee/task/commit.html
+++ b/src/main/resources/templates/employee/task/commit.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Majestic Admin</title>
+    <title>Dispatcher 提交任务</title>
     <link rel="stylesheet" th:href="@{/vendors/mdi/css/materialdesignicons.min.css}">
     <link rel="stylesheet" th:href="@{/vendors/base/vendor.bundle.base.css}">
     <!-- endinject -->
@@ -33,42 +33,19 @@
                     <div class="col-12 grid-margin">
                         <div class="card">
                             <div class="card-body">
-
-                                <h1 class="card-title">个人信息详情</h1>
-
-                                <form class="form-sample" th:method="POST" action="/employee/details" th:object="${employee}"
-                                      onsubmit="return submit_sure()">
-                                    <input type="hidden" name="_method" value="PUT">
-                                    <input type="hidden" name="id" th:value="${employee.id}"/>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group row">
-                                                <label class="col-sm-3 col-form-label">ID：</label>
-                                                <div class="col-sm-9">
-                                                    <input type="text" readonly name="id"
-                                                           th:value="${employee.id}" class="form-control"/>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group row">
-                                                <label class="col-sm-3 col-form-label">用户名：</label>
-                                                <div class="col-sm-9">
-                                                    <input type="text" readonly name="username" id="id"
-                                                           th:value="${employee.username}" class="form-control"/>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <h4 class="card-title">提交任务</h4>
+                                <form class="form-sample" id="form-commit" method="POST" enctype="multipart/form-data"
+                                      th:action="@{/employee/task/{taskId}/commit(taskId=${task.id})}"
+                                onsubmit="return submit_valid()">
+                                    <input type="text" hidden name="taskId" th:value="${task.id}">
+                                    <input type="text" hidden name="employeeId" th:value="${employee.id}">
 
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group row">
-                                                <label class="col-sm-3 col-form-label">密码：</label>
+                                                <label class="col-sm-3 col-form-label">任务标题</label>
                                                 <div class="col-sm-9">
-                                                    <input type="password" name="password" th:value="${employee.password}"
+                                                    <input type="text" readonly name="subject" th:value="${task.subject}"
                                                            class="form-control"/>
                                                 </div>
                                             </div>
@@ -78,23 +55,21 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group row">
-                                                <label class="col-sm-3 col-form-label">邮箱：</label>
+                                                <label class="col-sm-3 col-form-label">提交人</label>
                                                 <div class="col-sm-9">
-                                                    <input type="text" readonly name="mail" th:value="${employee.mail}"
+                                                    <input type="text" readonly th:value="${employee.username}"
                                                            class="form-control"/>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
 
-
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group row">
-                                                <label class="col-sm-3 col-form-label">部门：</label>
+                                                <label class="col-sm-3 col-form-label">备注</label>
                                                 <div class="col-sm-9">
-                                                    <input type="text" readonly name="department"
-                                                           th:value="${employee.department}" class="form-control"/>
+                                                    <input type="text" name="message" class="form-control"/>
                                                 </div>
                                             </div>
                                         </div>
@@ -103,17 +78,16 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group row">
-                                                <label class="col-sm-3 col-form-label">目前得分：</label>
+                                                <label class="col-sm-3 col-form-label">文件上传</label>
                                                 <div class="col-sm-9">
-                                                    <input type="text" readonly name="score"
-                                                           th:value="${employee.score}" class="form-control"/>
+                                                    <input id="uploadFile" type="file" name="file" class="form-control"/>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
 
                                     <input class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"
-                                           type="submit" style="width:150px; height:50px;float: right;">
+                                           type="submit" style="width:150px; height:50px;float: right;"></input>
                                 </form>
                             </div>
                         </div>
@@ -128,18 +102,27 @@
 </div>
 <!-- container-scroller -->
 <!-- plugins:js -->
-
 <script type="text/javascript">
+    function submit_valid() {
+        var fileInput = $('#uploadFile').get(0).files[0];
+        console.info(fileInput);
+        if(fileInput){
+            submit_sure();
+        }else{
+            alert("请选择上传文件！");
+            return false;
+        }
+    }
+
     function submit_sure() {
-        const gnl = confirm("确定要修改?");
+        const gnl = confirm("确定要提交?");
         if (gnl == true) {
             return true;
-        } else {
+        }else{
             return false;
         }
     }
 </script>
-
 <script th:src="@{/vendors/base/vendor.bundle.base.js}"></script>
 <!-- endinject -->
 <!-- inject:js -->
