--- a/src/main/resources/templates/employee/wrapper.html
+++ b/src/main/resources/templates/employee/wrapper.html
@@ -153,9 +153,9 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/admin/commit}">
+            <a class="nav-link" th:href="@{'/employee/tasks?state=notCompleted'}">
                 <i class="mdi mdi-view-headline menu-icon"></i>
-                <span class="menu-title">提交任务</span>
+                <span class="menu-title">未完成任务</span>
             </a>
         </li>
 
@@ -163,6 +163,13 @@
             <a class="nav-link" th:href="@{/employee/details}">
                 <i class="mdi mdi-view-headline menu-icon"></i>
                 <span class="menu-title">个人信息</span>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/employee/commits}">
+                <i class="mdi mdi-view-headline menu-icon"></i>
+                <span class="menu-title">提交记录</span>
             </a>
         </li>
 
